# funboy-discord-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  fsl_documentation.json
src/: commands.rs  fsl_documentation.rs  fsl_interpreter.rs  interpreter.rs  io_utils.rs  main.rs  ollama_generator.rs  storage.rs  text_interpolator.rs
src/commands/: image.rs  io_util.rs  miscellaneous.rs  ollama.rs  random.rs  sound.rs  text_gen.rs
src/fsl_interpreter/: lexer.rs  parser.rs
src/interpreter/: lexer.rs  parser.rs
src/io_utils/: change_log.rs  context_extension.rs  custom_components.rs  discord_message_format.rs  input_interp.rs  quote_filter.rs  str_extension.rs
src/ollama_generator/: ollama_generator.rs
src/storage/: template_database.rs
src/text_interpolator/: defaults.rs
