[package]
name = "funboy"
version = "0.1.0"
edition = "2021"

[dependencies]
template_substitution_database = { path = "/home/dustin/Documents/developer/rust_programs/template_substitution_database" }
text_interpolator = { path = "/home/dustin/Documents/developer/rust_programs/text_interpolator" }
poise = "0.6.1"
tokio = {version = "1.39.2", features = ["full"]}
rand = "0.8.5"
reqwest = "0.11"

[dependencies.songbird]
version = "0.4"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["mp3", "aac", "isomp4", "alac"]
